--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "author": "Sithija THewa Hettige",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.3"
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.3",
+    "morgan": "^1.9.1",
+    "prop-types-extra": "^1.1.0",
+    "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
   }
 }
-
-
-
-
-
-
-
