--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "prop-types-extra": "^1.1.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
