--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "hamoni-sync": "^1.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "react-select": "^2.3.0",
+    "react-table": "^6.8.6",
     "react-transition-group": "^2.5.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
